add centralized error handling to timers